--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,10 @@ buildscript {
 
 allprojects {
     repositories {
+        flatDir {
+            dirs 'libs'
+            dirs project(':app').file('libs')
+        }
         google()
         jcenter()
         maven { url 'https://jitpack.io' }
